--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "javascript-development-environment",
   "version": "1.0.0",
-  "description": "JavaScript development environment Pluralsight course by Cory House",
-  "scripts": {
-  },
-  "author": "Cory House",
+  "description": "JavaScript development environment inspired by Cory House",
+  "scripts": {},
+  "author": "George Rodier",
   "license": "MIT",
   "dependencies": {
     "whatwg-fetch": "^2.0.3"
@@ -25,22 +24,21 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-watch": "^3.1.2",
     "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
     "jsdom": "^11.2.0",
-    "json-schema-faker": "^0.5.0-rc11",
+    "json-schema-faker": "^0.5.0-rc9",
     "json-server": "^0.12.0",
     "localtunnel": "^1.8.3",
-    "mocha": "^3.5.3",
+    "mocha": "^5.0.0",
     "nock": "^9.0.20",
     "npm-run-all": "^4.1.1",
-    "nsp": "^2.8.0",
+    "nsp": "^3.2.0",
     "numeral": "^2.0.6",
     "open": "^0.0.5",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.1.0",
+    "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.19.1",
-    "webpack-md5-hash": "^0.0.5"
+    "webpack-md5-hash": "^0.0.6"
   }
 }
