--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "javascript-development-environment",
   "version": "1.0.0",
   "description": "JavaScript development environment inspired by Cory House",
-  "scripts": {},
+  "scripts": {
+      "start": "node buildScripts/srcServer.js"
+  },
   "author": "George Rodier",
   "license": "MIT",
   "dependencies": {
