--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "JavaScript development environment inspired by Cory House",
   "scripts": {
+      "prestart": "node buildScripts/startMessage.js",
       "start": "node buildScripts/srcServer.js"
   },
   "author": "George Rodier",
