--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript development environment inspired by Cory House",
   "scripts": {
       "prestart": "node buildScripts/startMessage.js",
-      "start": "node buildScripts/srcServer.js"
+      "start": "node buildScripts/srcServer.js",
+      "security-check": "nsp check"
   },
   "author": "George Rodier",
   "license": "MIT",
