--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "JavaScript development environment inspired by Cory House",
   "scripts": {
-      "prestart": "babel-node buildScripts/startMessage.js",
-      "start": "npm-run-all --parallel security-check open:src lint:watch",
-      "open:src": "babel-node buildScripts/srcServer.js",
-      "lint": "esw webpack.config.* src buildScripts --color",
-      "lint:watch": "npm run lint -- --watch",
-      "security-check": "nsp check",
-      "localtunnel": "lt --port 3000",
-      "share": "npm-run-all --parallel open:src localtunnel"
+    "prestart": "babel-node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
+    "open:src": "babel-node buildScripts/srcServer.js",
+    "lint": "esw webpack.config.* src buildScripts --color",
+    "lint:watch": "npm run lint -- --watch",
+    "security-check": "nsp check",
+    "localtunnel": "lt --port 3000",
+    "share": "npm-run-all --parallel open:src localtunnel",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "George Rodier",
   "license": "MIT",
@@ -39,6 +41,7 @@
     "localtunnel": "^1.8.3",
     "mocha": "^5.0.0",
     "nock": "^9.0.20",
+    "node-jsdom": "^3.1.5",
     "npm-run-all": "^4.1.1",
     "nsp": "^3.2.0",
     "numeral": "^2.0.6",
